packages/compiler/tests/fixtures/invalid/fetch-in-template.svelte
<script>
  let count = 0
</script>
<text>{fetch("/api/title")}</text>
